--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.gitignore.io/api/macos,flask,python
 # Edit at https://www.gitignore.io/?templates=macos,flask,python
 
+# Added to ignore output file
+estate.json
+
 ### Flask ###
 instance/*
 !instance/.gitignore
